Chrome is doing some odd css caching so its firefox for the debugging now. Added some css to have the scrollbar,

--- a/Galleriet/Galleriet/Style/Whydoesntitworkdamn.css
+++ b/Galleriet/Galleriet/Style/Whydoesntitworkdamn.css
@@ -10,9 +10,15 @@ img {
     width: 75%;
 }
 .imageswitcher {
-    width: 75%;
-    overflow-x: scroll;
+    display: inline-block;
 }
 .imageswitcher img {
     width: 5%;
+}
+.liimageswitcher {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    height: 70px;
+    width: 75%;
+    white-space: nowrap;
 }
