--- a/Galleriet/Galleriet/Style/Whydoesntitworkdamn.css
+++ b/Galleriet/Galleriet/Style/Whydoesntitworkdamn.css
@@ -29,3 +29,25 @@ img {
 .current {
     border: 2px solid green;
 }
+.successcontainer {
+    width:60%;
+    height: 100px;
+    border: 1px solid black;
+    background-color:gainsboro;
+}
+.successmessage {
+    display: inline-block;
+    margin-top: 40px;
+    margin-left: 20px;
+}
+.successbutton {
+    float: right;
+    margin-right: 10px;
+    margin-top: 5px;
+    display: inline-block;
+    background-color: #000;
+    padding: 2px 4px;
+    text-decoration: none;
+    color: white;
+    border-radius: 2px 2px;
+}
