--- a/Galleriet/Galleriet/Style/Whydoesntitworkdamn.css
+++ b/Galleriet/Galleriet/Style/Whydoesntitworkdamn.css
@@ -26,7 +26,7 @@ img {
     width: 60%;
     white-space: nowrap;
 }
-.current {
+.currentimage {
     border: 2px solid green;
 }
 .successcontainer {
